assets/css/style.css
/* reset */

body, h1, h2, h3, a, li
section, div, ul, p, table {
  border: 0;
  margin: 0;
  padding: 0;
  outline: 0;

  text-decoration: inherit;
  text-align: inherit;
  vertical-align: inherit;
  box-sizing: inherit;
  font: inherit;
  color: inherit;

  background: transparent;
}

ul {
  list-style: none;
}

group:after {
  content: "";
  display: block;
  clear: both;
}

img {
  width: 100%;
  height: auto;
  display: block;
}

body {
  position: relative;
  box-sizing: border-box;
  font-family: 'Josefin Sans', sans-serif;
}

h1 {
  font-size: 50px;
}

h2 {
  font-size: 18px;
}

.display-none {
  /*display: none;*/
  opacity: 0;
  transition: 0.2s;
}

.display-zero {
  display: none;
}

.display-now {
  opacity: 1;
  transition: 0.2s;
}

.main-window {
  min-width: 900px;
}

/* sidebar */
#sidebar {
  width: 25%;
  min-width: 230px;
  height: 100vh;
  float: left;
  position: absolute;
  padding-top: 20px;
  background: #E25D33;
  color: #FEFFF8;
  box-shadow: 5px 0px 10px 0px rgba(0,0,0,0.75);
}

#sidebar h1, #sidebar h2 {
  padding-right: 10px;
  text-align: right;
}

#sidebar {
  letter-spacing: 2px;
}

#sidebar h1 {
  letter-spacing: 4px;
  font-family: "Lato", sans-serif;
}

#sidebar h2 {
  padding-top: 0px;
  padding-right: 13px;
  color: #ccc;
  letter-spacing: 4px;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
}

#sidebar .nav-links {
  text-align: right;
  padding-top: 20px;
  font-weight: lighter;
}

.nav-links li {
  padding: 10px 12px;
  font-size: 20px;
  font-weight: lighter;
  -webkit-font-smoothing: antialiased;
}

.active {
  text-decoration: underline;
  color: #000;
}

.nav-links li:hover {
  background: #ccc;
}

#sidebar .nav-icon {
  height: 20px;
  width: auto;
  float: right;
  margin: 0px;
  padding-left: 4px;
}

#sidebar .contact-links {
  position: absolute;
  bottom: 15px;
  right: 12px;
}

#sidebar .contact-links li {
  float:left;
  padding-left: 10px;
  opacity: 0.5;
}

#sidebar .contact-links li:hover {
  opacity: 1;
}

.contact-links img {
  height: 40px;
  width: auto;
}

/* main window */
#main {
  top: 0;
  float: right;
  overflow-y: scroll;
  width: 73.5%;
  height: 100vh;

}

#main h1 {
  text-align: center;
  padding-top: 10px;
  margin-bottom: 2px;
  font-weight: lighter;
}


/* intro */
.intro {
  /*margin: 20px 20px 0px 20px;*/
  position: relative;
  color: #FEFFF8;
  background-image:
  linear-gradient(
    #eeeeee, #ffffff
  );
  border-bottom: 5px solid #eee;
}

#main .intro h1 {
  padding-top: 10px;
  font-weight: lighter;
}

.splash-img {
  display: block;
  height: 300px;
  width: auto;
  -moz-border-radius: 50%;
  border-radius: 50%;
  margin: 10px auto 10px auto;
 }

 .intro .name {
   font-size: 72px;
   font-family: 'Lato', sans-serif;
   margin: 0 auto;
   /*padding-top: 2px;*/
   text-align: center;
   color: #333;
   letter-spacing: 3px;
 }

 #main .intro .title {
   font-size: 36px;
   margin: 0 auto;
   padding-top: 0px;
   padding-bottom: 0px;
   text-align: center;
   color: #000;
   letter-spacing: 2px;
   font-weight: lighter;
 }

.intro .tagline {
  font-size: 24px;
  margin: 0 auto;
  padding: 0px;
  text-align: center;
  color: #000;
}

strong {
  color: #E25D33;
}

.coding-skills {
  /*overflow: hidden;*/
}

.coding-skills table {
  margin: 0 auto;
}

.coding-skills td {
  position: relative;
}

.coding-icon {
  width: 40px;
  height: auto;
  padding-left: 20px;
  padding-top: 10px;
  padding-bottom: 30px;
}

.coding-skills td:after {
  content: attr(title);
  display: none;
  position: absolute;
  left: 70%;
  transform: translateX(-50%);
  bottom: 74px;
  background: #000;
  color: #fff;
  font-size: 12px;
  padding: 5px 10px;
  border-radius: 5px;
}

.coding-skills td:before {
  content: "";
  display: none;
  position: absolute;
  left: 70%;
  transform: translateX(-50%);
  bottom: 70px;
  border-top: 5px solid #000;
  border-bottom: 0;
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;
}

.coding-skills td:hover:before,
.coding-skills td:hover:after {
  display: block;
}

/* about-me */

#main .secondary-h1 {
  font-size: 52px;
  padding-top: 20px;
  padding-bottom: 20px;
  margin: 0px;
}

.about-me {
  /*margin-left: 20px;
  margin-right: 20px;*/
  /*padding: 20px 20px;*/
  background-image:
  linear-gradient(
    #ffffff, #eeeeee
  );
  border-bottom: 5px solid #fff;
  position: relative;
}

.about-me a {
  text-decoration: underline;
}

.about-me a:hover {
  color: #E25D33;
}

.about-me p {
  font-size: 20px;
  margin: 0 auto;
  font-family: "Lato", sans-serif;
  font-weight: lighter;
  width: 600px;
  padding-bottom: 30px;
}

/* projects */
.projects {
  /*margin-left: 20px;
  margin-right: 20px;*/
  background-image:
  linear-gradient(
    #eeeeee, #ffffff
  );
  border-bottom: 5px solid #eee;
  overflow: hidden;
}

.project-window {
  display: block;
  width: 650px;
  margin: 3vw auto;
  position: relative;
  overflow: hidden;
  font-family: "Lato", sans-serif;
}

.project-window:nth-child(2){
  margin-top: 0vw;
}

.project-window img {
  float: left;
  height: 150px;
  width: auto;
  margin: 0px auto 0px 10px;
  border-top: 1px solid #aaa;
  border-bottom: 1px solid #aaa;
  border-left: 1px solid #aaa;
  border-right: 1px solid #aaa;
  position: relative;
  z-index: 5;
}

.project-window ul {
  float: left;
  color: #000;
  padding-left: 20px;
}

.project-window ul h2 {
  font-weight: lighter;
  font-size: 20px;
}

.project-window li {
  padding: 5px 0px;
  font-weight: lighter;
}


.project-window .live-link,
.project-window .github-link {
  position: absolute;
  left: 100px;
  font-size: 18px;
  z-index: 6;
  background: #fff;
  padding: 5px;
  border-radius: 5px;
  border: 1px solid #eee;
}

.project-window .live-link:hover,
.project-window .github-link:hover {
  background: #000;
  color: #fff;
  transition: 0s;
}

.project-window .live-link {
  top: 40px;
  z-index: 6;
}

.project-window .github-link {
  top: 80px;
  z-index: 6;
  left: 90px;
}

/* resume */
.resume {
  /*margin-left: 20px;
  margin-right: 20px;*/
  background-image:
  linear-gradient(
    #ffffff, #eeeeee
  );
  border-bottom: 5px solid #fff;
  position: relative;
}

.resume-viewer {
  margin: 0 auto;
  width: 600px;
  padding-top: 10px;
  padding-bottom: 20px;
  position: relative;
}

/* contact */
.contact {
  /*margin-left: 20px;
  margin-right: 20px;*/
  background-image:
  linear-gradient(
    #eeeeee, #ffffff
  );
  border-bottom: 5px solid #eee;
  position: relative;

}

.contact-page {
  margin: 0 auto;
  overflow: hidden;
  width: 634px;
}

.contact-page p {
  text-align: center;
  font-size: 30px;
}

.contact-box {
  float: left;
  padding: 20px 30px;
}

.contact img {
  height: 80px;
  width: auto;
  display: block;
  margin: 0 auto;
}

.contact p {
  margin: 0 auto;
  letter-spacing: 2px;
}

.contact-box:hover p {
  opacity: .5;
}



@media (max-width: 600px) {
  body {
    overflow-y: hidden;
  }

  #sidebar {
    min-width: 0;
    width: 100%;
    position: relative;
    height: auto;
    padding-top: 5px;
    padding-left: 15px;
    margin: 0 auto;
    z-index: 7;
  }

  #sidebar h1,
  #sidebar h2 {
    text-align: left;
  }

  #sidebar .top {
    margin: 0 auto;
    display: block;
  }
  #sidebar h1 {
    font-size: 2em;
    display: inline-block;
  }

  #sidebar h2 {
    font-size: 1.75em;
    display: inline-block;
  }

  #sidebar .nav-links {
    margin: 0 auto;
    padding-top: 5px;
    text-align: center;
    padding-left: 0px;
    margin-left: 0px;
    overflow: hidden;
  }

  .nav-links li {
    float: left;
    padding-top: 5px;
    text-decoration: underline;
    color: #000;
    font-size: .9em;
    padding-left: 0px;
    margin-left: 0px;
  }

  .nav-icon {
    display: none;
  }

  #sidebar .contact-links {
    display: none;
  }

  #main  {
    width: 100vw;
    float: none;
    overflow-x: hidden;
    overflow-y: scroll;
  }

  .main-window {
    min-width: 0;
    width: 100%;
  }

  .intro .name {
    font-size: 2em;
  }

  #main .intro .title {
    font-size: 1.5em;
  }


  .intro .tagline {
    font-size: 1.25em;
  }

  .coding-skills table{
    width: auto;
    padding: 0px 10px;
  }

  .coding-icon {
    width: 100%;
    height: auto;
    padding-left: 0.1em;
    padding-top: 0.1em;
    padding-bottom: 0.1em;
  }

  .coding-skills td:after {
    bottom: 2em;
  }

  .coding-skills td:before {
    bottom: 1.3em;
  }

  .splash-img {
    height: 10em;
  }

  #main .secondary-h1 {
    font-size: 1.9em;
    padding-top: .5em;
    padding-bottom: .5em;
    margin: 0px;
  }

  .about-me p {
    font-size: 1em;
    width: 80%;
    padding-bottom: 1em;
  }

  .project-window {
    width: 90%;
  }

  .project-window img {
    float: none;
    width: 70%;
    height: auto;
    margin: 0 auto;
  }

  .project-window ul {
    float: none;
    width: 70%;
    margin: 0 auto;
    padding: 0px;
    font-size: 1em;
  }

  .project-window h2 {
    text-align: center;
  }

  .project-window .live-link,
  .project-window .github-link {
    position: relative;
    left: 0;
    display: block;
    margin: 0 auto;
    width: 40%;
    text-align: center;
    margin-top: .1em;
  }

  .display-none {
    opacity: 1;
  }

  .project-window .live-link {
    top: 0;
    position: relative;
  }

  .project-window .github-link {
    top: 0 !important;
    left: 0;
    position: relative;
  }

  .resume-viewer {
    width: 80%;
  }

  iframe {
    margin: 0 auto !important;
    width: 100%;
    height: 100vw;
  }

  .contact-page {
    margin: 0 auto;
    text-align: center;
    width: 80vw;
  }

  .contact-box {
    margin: 1%;
    padding: 1em;
    display: block;
  }

  .contact img {
    height: 2em;
    width: auto;
    display: block;
    margin: 0 auto;
  }

  .contact p {
    font-size: 1em;
  }

  .display-zero {
    display: block;
  }

}

